--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
       </header>
 
-      <section id="modal" class="modal-wrapper show-modal">
+      <section id="modal" class="modal-wrapper">
             <div class="modal">
                   <h4>Reservation</h4>
                   <h2>Booking a table</h2>
